# muninn

./: Cargo.toml  LICENSE.txt  README.md  default.nix  flake.nix  layout.glade  muninn.nix  shell.nix
src/: data.rs  main.rs  plotting.rs  state.rs  ui.rs
src/data/: timeseries.rs
src/ui/: app.rs  header.rs  mod.rs  player.rs  player_controls.rs  player_settings.rs  plot_settings.rs  plot_view.rs
