[package]
name = "muninn"
version = "0.4.4"
authors = ["Sarah Renkhoff <sarah.renkhoff@gmail.com>"]
edition = "2018"
license = "MIT"

[profile.release]
opt-level = 3

[dependencies]
plotters = "0.3.1"
gdk-pixbuf = "0.14.0"
glib = "0.14.2"
gdk = "0.14.0"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.14.0"
# features = ["v2_44"]
